Fixed layout n style sizes on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,16 @@
-body {
+body,
+html {
     font-family: Arial, sans-serif;
+    height: 100%;
+    overflow: hidden;
 }
 
 
 #chat-container {
-    width: 800px;
-    height: 600px;
+    /* width: 800px;
+    height: 600px; */
+    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,15 +21,16 @@ body {
 
 #messages {
     list-style-type: none;
-    height: 500px;
+    height: calc(100% - 170px);
     border: 2px solid black;
     border-radius: 20px;
-    width: calc(100% - 20px);
+    width: 100%; /*calc(100% - 20px);*/
     margin: 10px;
     padding: 10px;
     overflow-y: auto;
     overflow-x: hidden;
     user-select: none;
+    box-sizing: border-box;
 
 }
 
@@ -121,6 +127,7 @@ h1 {
     margin: 0;
     width: 100%;
     user-select: none;
+    flex-shrink: 2;
 
 }
 
@@ -134,6 +141,7 @@ h1 {
     box-sizing: border-box;
     margin: 0;
     user-select: none;
+    flex-shrink: 2;
 
 }
 
@@ -146,6 +154,7 @@ h1 {
     border-radius: 20px;
     font-size: 1.4em;
     border: 2px solid rgb(10, 30, 29);
+    flex-shrink: 2;
 
 }
 #message-input:focus {
@@ -166,5 +175,6 @@ h1 {
     cursor: pointer;
     border-radius: 20px;
     user-select: none;
+    flex-shrink: 2;
 
 }
